2015-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Eliminate a "clobber"
	compilation warning.

	* coders/jpeg.c (WriteJPEGImage): Eliminate a "clobber"
	compilation warning.

	* configure.ac: Don't compute libwmf2 and libxml2 linkage path
	based on claimed installation prefix.  This is hoped to improve
	configure reliability on multi-arch type systems.

2015-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use the first -I, -L, and -l arguments produced by
	freetype-config and don't produce arguments based on installation
	prefix.  This is hoped to improve configure reliability on
	multi-arch type systems.

2015-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): P_tmpdir is
	not an environment variable.  Need to consider Windows environment
	variables for Cygwin.

	* magick/random.c (InitializeMagickRandomKernel): For Microsoft
	Windows, use CryptGenRandom() to salt the built-in random number
	generator.

2015-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickRandReentrant): Quiet Coverity 10092
	"Calling risky function".
	(MagickRandNewSeed): Quiet Coverity 10093 "Calling risky
	function".

	* coders/tga.c (ReadTGAImage): Quiet Coverity 10201 "Identical
	code for different branches".

	* coders/pcx.c (ReadPCXImage): Quiet Coverity 10218 "Identical
	code for different branches".

2015-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetGeometry): Fix handling of area geometries
	in the form "5000000@".  Resolves SourceForge issue #299 "-resize
	with @ and > in geometry specification".

2015-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Disable matte channel for
	compression types which don't support it.  Resolves SourceForge
	bug #297 "GM distorts image using -transform".