@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150523"
-#define public MagickPackageReleaseDate "snapshot-20150523"
+#define public MagickPackageVersionAddendum ".020150524"
+#define public MagickPackageReleaseDate "snapshot-20150524"
