@@ -429,9 +429,6 @@
 /* Define to use the Windows GDI32 library */
 #undef HasWINGDI32
 
-/* Define if you have wmf library */
-#undef HasWMF
-
 /* Define if you have wmflite library */
 #undef HasWMFlite
 
