@@ -336,7 +336,7 @@ programs and provides access to debugging features that detect memory
 leaks, buffer overruns, multiple frees, use of uninitialized data, use
 of freed data, and many other common programming errors.</p>
 </li>
-<li><p class="first">GraphicsMagick requires libwmf 0.2.5 (or later) from</p>
+<li><p class="first">GraphicsMagick requires libwmflite from libwmf 0.2.5 (or later) from</p>
 <blockquote>
 <p><a class="reference external" href="http://sourceforge.net/projects/wvware/">http://sourceforge.net/projects/wvware/</a></p>
 </blockquote>
@@ -351,7 +351,9 @@ libwmf package as a whole depends on FreeType 2 and either the
 xmlsoft libxml, or expat libraries. Since GraphicsMagick already uses
 libxml (for reading SVG and to retrieve files via HTTP or FTP), it is
 recommended that the options '--without-expat --with-xml' be supplied
-to libwmf's configure script.</p>
+to libwmf's configure script.  If the other features of libwmf are
+not needed, then the '--disable-heavy' option may be used to only
+build libwmflite.</p>
 <p>GraphicsMagick's WMF renderer provides some of the finest WMF
 rendering available due its use of antialiased drawing algorithms.
 You may select a background color or texture image to render on. For
